--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity android:name="demo.la.battlehack.com.randyopencv.LeaderActivity"
+            android:label="@string/app_name">
+
+        </activity>
+        <activity android:name="demo.la.battlehack.com.randyopencv.RoleActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +34,6 @@
             </intent-filter>
 
         </activity>
-        <activity android:name="demo.la.battlehack.com.audio.AudioOutputActivity"
-            android:label="AndroidMedia">
-
-            </activity>
     </application>
 
 </manifest>
