--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="demo.la.battlehack.com.randyopencv" >
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.NFC" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front.autofocus"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -17,24 +25,27 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="demo.la.battlehack.com.activities.MainActivity"
+            android:name="demo.la.battlehack.com.activities.CameraActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
             android:label="@string/app_name" >
-
         </activity>
-        <activity android:name="demo.la.battlehack.com.activities.LeaderActivity"
-            android:label="@string/app_name">
-
+        <activity
+            android:name="demo.la.battlehack.com.activities.LeaderActivity"
+            android:label="@string/app_name" >
         </activity>
-        <activity android:name="demo.la.battlehack.com.activities.RoleActivity"
-            android:label="@string/app_name">
+        <activity
+            android:name="demo.la.battlehack.com.activities.RoleActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity
+            android:name="demo.la.battlehack.com.activities.LeaderSetUpActivity"
+            android:label="@string/title_activity_leader_set_up" >
         </activity>
     </application>
 
