--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile project(':libraries:opencv')
     compile files('src/main/libs/Parse-1.7.0.jar')
     compile files('src/main/libs/ndeftools-1.2.3.jar')
+    compile files('src/main/libs/json-simple-1.1.1.jar')
 }
