--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile files('src/main/libs/Parse-1.7.0.jar')
     compile files('src/main/libs/ndeftools-1.2.3.jar')
     compile files('src/main/libs/json-simple-1.1.1.jar')
+    compile files('src/main/libs/sendgrid-java.jar')
 }
