--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':libraries:opencv')
+    compile project(':libraries:sendgrid-android')
     compile files('src/main/libs/Parse-1.7.0.jar')
     compile files('src/main/libs/ndeftools-1.2.3.jar')
     compile files('src/main/libs/json-simple-1.1.1.jar')
